--- a/autoops/requirements.txt
+++ b/autoops/requirements.txt
@@ -1,11 +1,8 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-sqlalchemy==2.0.44
-alembic==1.17.0
-psycopg2-binary==2.9.11
-google-generativeai==0.3.2
-numpy==1.24.3
-scikit-learn==1.3.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
+fastapi>=0.100.0
+uvicorn>=0.20.0
+pydantic>=2.0.0
+sqlalchemy>=2.0.0
+google-generativeai>=0.3.0
+numpy>=1.20.0
+scikit-learn>=1.0.0
+python-multipart>=0.0.5
