--- a/autoops/requirements.txt
+++ b/autoops/requirements.txt
@@ -1,8 +1,8 @@
-fastapi>=0.100.0
-uvicorn>=0.20.0
-pydantic>=2.0.0
-sqlalchemy>=2.0.0
-google-generativeai>=0.3.0
-numpy>=1.20.0
-scikit-learn>=1.0.0
-python-multipart>=0.0.5
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+sqlalchemy==2.0.23
+google-generativeai==0.3.2
+numpy==1.24.3
+scikit-learn==1.3.2
+python-multipart==0.0.6
