--- a/autoops/render.yaml
+++ b/autoops/render.yaml
@@ -5,8 +5,8 @@ services:
     plan: free
     buildCommand: |
       pip install --upgrade pip
-      pip install -r requirements.txt
-    startCommand: python production_backend_simple.py
+      pip install -r requirements_minimal.txt
+    startCommand: python production_backend_minimal.py
     envVars:
       - key: GEMINI_API_KEY
         value: AIzaSyBFlzrCZDE4vbDF6K5uE3-BkaxzM3N5_nM
@@ -14,6 +14,4 @@ services:
         value: sqlite:///./autoops.db
       - key: PORT
         value: 10000
-      - key: PYTHON_VERSION
-        value: 3.11.8
     healthCheckPath: /health
